feat: appointment status enum